# utf-token

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
data/lookup_tables/: o200k_base_32768_metadata.json  o200k_base_32768_tail_256_tokens.txt  o200k_base_32768_tokens.txt  o200k_base_65536_metadata.json  o200k_base_65536_tail_256_tokens.txt  o200k_base_65536_tokens.txt  tokenizer_gemma4_32768_metadata.json  tokenizer_gemma4_32768_tail_256_tokens.txt  tokenizer_gemma4_32768_tokens.txt  tokenizer_gemma4_65536_metadata.json  tokenizer_gemma4_65536_tail_256_tokens.txt  tokenizer_gemma4_65536_tokens.txt
docs/: benchmarks_niah.md  releasing.md
docs/assets/benchmarks/: niah_identifier_prompt_example.txt  niah_identifier_summary.csv  niah_identifier_summary.md
notebooks/: playground.ipynb  token_savings_examples.ipynb
scripts/: download_token_vocab.py  process_token_vocab.py  smoke_installed_package.py  token_savings_examples.py
scripts/benchmarks/: __init__.py  niah_dataset.py  openrouter_client.py  run_niah_identifier_benchmark.py
src/utf_token/: __init__.py  _api.py  _reversible.py  _tables.py
tests/: test_download_token_vocab.py  test_niah_identifier_benchmark.py  test_process_token_vocab.py  test_utf_token.py
